media and variables are added

--- a/source/sass/base/_vars.scss
+++ b/source/sass/base/_vars.scss
@@ -1,11 +1,11 @@
 /* Color */
 $cwhite: #fff;
 $cblack: #000;
-$cdark: #212121;
-$cbase: #353535;
-$cmain: #777;
+$cdark: #020202;
+$cbase: #111111;
+$cmain: #7A7A7A;
 $cread: #a3a3a3;
-$cgray: #ccc;
+$cgray: #F5F5F5;
 $cline: #eee;
 $clight: #fafafa;
 $cinfo: #5bc0de;
@@ -13,7 +13,8 @@ $cwarning: #f0ad4e;
 $cdanger: #d9534f;
 $csuccess: #5cb85c;
 $cform: #f8fafb;
-$ccorp: #0A2472;
+$ccorp: #FBB50D;
+$clightcorp: #FFDF93;
 
 // added 
 $cgreen: #3E8914;
@@ -45,8 +46,8 @@ $bdrp: 50%;
 /* Border radius */
 
 /* Font family */
-$ffbase: 'roboto', sans-serif;
-$ffmain: 'roboto', sans-serif;
+$ffbase: "Rubik",Helvetica,sans-serif;
+$ffmain: "Rubik",Helvetica,sans-serif;
 $ffremix: "remixicon";
 $ffawesome: "Font Awesome 5 Pro";
 /* Font family */
