--- a/source/sass/layout/_root.scss
+++ b/source/sass/layout/_root.scss
@@ -1,4 +1,8 @@
 @import 'header';
-@import 'sections/01_first_section';
+@import 'sections/01_hero';
+@import 'sections/02_benefits';
+@import 'sections/03_categories_list';
+@import 'sections/04_custom_banners';
+@import 'sections/05_brands';
 @import 'footer';
 @import 'responsive';
