--- a/source/sass/layout/sections/_01_hero.scss
+++ b/source/sass/layout/sections/_01_hero.scss
@@ -16,6 +16,7 @@ section.hero{
       overflow: hidden;
       @media(max-width: 1024px){
         width: 100%;
+        height: max-content;
       }
       figure{
         position: absolute;
@@ -35,6 +36,9 @@ section.hero{
         justify-content: space-between;
         padding: 25px 15px;
         height: 100%;
+        @media(max-width: 1024px){
+          padding: 15px;
+        }
         .text:not(.banner_button){
           color: $cwhite;
           font-size: 19px;
@@ -44,6 +48,10 @@ section.hero{
           &.title{
             font-size: 34px;
             line-height: 34px;
+            @media(max-width: 1024px){
+              font-size: 26px;
+              line-height: 26px;
+            }
           }
         }
         .banner_button{
@@ -59,6 +67,11 @@ section.hero{
             padding: 2px 10px;
             font-size: 15px;
             transition: 0.4s;
+            @media(max-width: 1024px){
+              padding: 2px 4px;
+              width: max-content;
+              height: max-content;
+            }
             &:hover{
               color: $cwhite;
               background-color: $cbase;
@@ -72,6 +85,10 @@ section.hero{
               background-color: transparent;
               color: $cwhite;
               padding: 0;
+              @media(max-width: 1024px){
+                justify-content: flex-end;
+                gap: 10px;
+              }
               &:hover{
                 color: $cbase;
                 &::after{
@@ -93,12 +110,23 @@ section.hero{
         .banner_content{
           .text:not(.banner_button){
             padding-top: 50%;
+            @media(max-width: 1024px){
+              padding-top: 0;
+            }
           }
         }
       }
       &.right{
         .banner_content{
           padding-bottom: 65px;
+          @media(max-width: 1024px){
+            padding-bottom: 15px;
+            display: flex;
+            gap: 10px;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: row;
+          }
         }
       }
     }
@@ -126,6 +154,9 @@ section.hero{
           position: absolute;
           bottom: 40px;
           width: 100%;
+          @media(max-width: 1024px){
+            bottom: 30px;
+          }
           .owl-pagination{
             bottom: 0;
             .owl-page{
@@ -153,6 +184,9 @@ section.hero{
           height: 100%;
           overflow: hidden;
           padding: 25px 20px 100px;
+          @media(max-width: 1024px){
+            padding: 15px 15px 80px;
+          }
           figure{
             position: absolute;
             top: 0;
@@ -173,6 +207,11 @@ section.hero{
               margin-bottom: 50px;
               color: $cwhite;
               font-weight: 700;
+              @media(max-width: 1024px){
+                font-size: 30px;
+                margin-bottom: 20px;
+                line-height: 34px;
+              }
               span{
                 color: $ccorp;
               }
@@ -181,6 +220,10 @@ section.hero{
               margin-bottom: 20px;
               font-size: 27px;
               color: $cwhite;
+              @media(max-width: 1024px){
+                font-size: 20px;
+                margin-bottom: 40px;
+              }
             }
             .banner_points{
               ul{
@@ -188,12 +231,19 @@ section.hero{
                 gap: 20px 50px;
                 grid-template-columns: repeat(2, max-content);
                 margin: 0;
+                @media(max-width: 1024px){
+                  grid-gap: 12px;
+                  grid-template-columns: 1fr;
+                }
                 li{
                   display: flex;
                   align-items: center;
                   gap: 10px;
                   color: $cwhite;
                   font-size: 17px;
+                  @media(max-width: 1024px){
+                    font-size: 16px;
+                  }
                   img{
 
                   }
