--- a/source/sass/layout/sections/_02_benefits.scss
+++ b/source/sass/layout/sections/_02_benefits.scss
@@ -4,7 +4,10 @@ section.benefits{
     background-color: $clightcorp;
     border-radius: 5px;
     .section_title{
-      margin-top: 30px;
+      padding-top: 30px;
+      @media(max-width: 1024px){
+        padding-top: 15px;
+      }
     }
     .block_wrap{
       padding: 0 25px 30px;
@@ -17,34 +20,58 @@ section.benefits{
           grid-template-columns: 1fr;
         }
         .benefit_item{
+          display: flex;
+          flex-direction: column;
           padding: 20px;
           background-color: $cwhite;
           border-radius: 5px;
+          @media(max-width: 1024px){
+            flex-direction: row;
+            flex-wrap: wrap;
+            align-items: center;
+            padding: 15px;
+            gap: 15px;
+          }
           figure{
             display: flex;
             align-items: center;
             justify-content: space-between;
             margin-bottom: 15px;
+            @media(max-width: 1024px){
+              width: 35px;
+              margin-bottom: 0;
+              position: static;
+            }
             &:after{
               counter-increment: benefitCounter;
               content: "0" counter(benefitCounter);
               color: #929292;
               font-size: 15px;
               font-weight: 700;
+              @media(max-width: 1024px){
+                position: absolute;
+                right: 15px;
+                top: 15px;
+              }
             }
             img{
 
             }
           }
-          .benefit_content{
-            .benefit_title{
-              margin-bottom: 5px;
-              font-size: 14px;
+          .benefit_title{
+            margin-bottom: 5px;
+            font-size: 14px;
+            @media(max-width: 1024px){
+              flex: 1;
+              padding-right: 40px;
             }
-            .benefit_text{
-              font-size: 13px;
-              color: $cmain;
-              line-height: 24px;
+          }
+          .benefit_text{
+            font-size: 13px;
+            color: $cmain;
+            line-height: 24px;
+            @media(max-width: 1024px){
+              width: 100%;
             }
           }
         }
