--- a/source/sass/layout/sections/_05_brands.scss
+++ b/source/sass/layout/sections/_05_brands.scss
@@ -11,10 +11,17 @@ section.brands{
       padding: 15px;
       background-color: $cgray;
       border-radius: 5px;
+      @media(max-width: 1024px){
+        padding: 23px;
+      }
       figure{
         width: 100%;
         img{
           width: 100%;
+          height: 65px;
+          @media(max-width: 1024px){
+            height: 95px;
+          }
         }
       }
     }
