--- a/wp-content/themes/dltheme/homeTest.twig
+++ b/wp-content/themes/dltheme/homeTest.twig
@@ -128,37 +128,29 @@
             <figure>
               <img src="catalog/view/theme/Gobazar/image/images/benefit1.svg" alt="">
             </figure>
-            <div class="benefit_content">
-              <div class="benefit_title">ЗАПЧАСТИ С ДОСТАВКОЙ!</div>
-              <div class="benefit_text">Доставка до ТК – БЕСПЛАТНО. <br> Стоимость доставки до точки - индивидуально.</div>
-            </div>
+            <div class="benefit_title">ЗАПЧАСТИ С ДОСТАВКОЙ!</div>
+            <div class="benefit_text">Доставка до ТК – БЕСПЛАТНО. <br> Стоимость доставки до точки - индивидуально.</div>
           </div>
           <div class="benefit_item">
             <figure>
               <img src="catalog/view/theme/Gobazar/image/images/benefit2.svg" alt="">
             </figure>
-            <div class="benefit_content">
-              <div class="benefit_title">ЗАПЧАСТИ С ЗАВОДОВ НАПРЯМУЮ!</div>
-              <div class="benefit_text">Наши партнеры - производители запчастей на JCB, Komatsu, Volvo, CAT и другие</div>
-            </div>
+            <div class="benefit_title">ЗАПЧАСТИ С ЗАВОДОВ НАПРЯМУЮ!</div>
+            <div class="benefit_text">Наши партнеры - производители запчастей на JCB, Komatsu, Volvo, CAT и другие</div>
           </div>
           <div class="benefit_item">
             <figure>
               <img src="catalog/view/theme/Gobazar/image/images/benefit3.svg" alt="">
             </figure>
-            <div class="benefit_content">
-              <div class="benefit_title">ЗАПЧАСТИ JCB НА 3CX И 4CX!</div>
-              <div class="benefit_text">Огромный каталог запчастей на самые популярные экскаваторы-погрузчики!</div>
-            </div>
+            <div class="benefit_title">ЗАПЧАСТИ JCB НА 3CX И 4CX!</div>
+            <div class="benefit_text">Огромный каталог запчастей на самые популярные экскаваторы-погрузчики!</div>
           </div>
           <div class="benefit_item">
             <figure>
               <img src="catalog/view/theme/Gobazar/image/images/benefit1.svg" alt="">
             </figure>
-            <div class="benefit_content">
-              <div class="benefit_title">ЗАПЧАСТИ ОПТОМ!</div>
-              <div class="benefit_text">Предлагаем выгодные оптовые цены поставщикам запчастей на спецтехнику в России!</div>
-            </div>
+            <div class="benefit_title">ЗАПЧАСТИ ОПТОМ!</div>
+            <div class="benefit_text">Предлагаем выгодные оптовые цены поставщикам запчастей на спецтехнику в России!</div>
           </div>
         </div>
       </div>
@@ -167,8 +159,310 @@
   <section class="categories_list">
     <div class=" dl_container">
       <div class="section_title">Каталог запчастей для спецтехники</div>
-      <div class="categories_catalog">
-        <div class="catalog_item"></div>
+      <div class="categories_catalog grid">
+        <div class="list_row">
+          <div class="grid grid-6">
+            <div class="category_item">
+              <div class="category_item_image">
+                <a href="#">
+                  <img src="catalog/view/theme/Gobazar/image/images/cat1.png" alt="">
+                  <span>Навесное оборудование</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-3">
+            <div class="category_item">
+              <div class="category_item_list">
+                <ul>
+                  <li>
+                    <a href="#">Аутригеры</a>
+                  </li>
+                  <li>
+                    <a href="#">Болты навесного оборудования</a>
+                  </li>
+                  <li>
+                    <a href="#">Быстросъемные соединения</a>
+                  </li>
+                  <li>
+                    <a href="#">Вкладыши телескопа</a>
+                  </li>
+                  <li>
+                    <a href="#">Втулки</a>
+                  </li>
+                  <li>
+                    <a href="#">Втулки гидромолота</a>
+                  </li>
+                  <li>
+                    <a href="#">Зубья ковша</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-3">
+            <div class="category_item">
+              <div class="category_item_list">
+                <ul>
+                  <li>
+                    <a href="#">Аутригеры</a>
+                  </li>
+                  <li>
+                    <a href="#">Каретки</a>
+                  </li>
+                  <li>
+                    <a href="#">Ковши</a>
+                  </li>
+                  <li>
+                    <a href="#">Ножи</a>
+                  </li>
+                  <li>
+                    <a href="#">Пальцы</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="list_row">
+          <div class="grid grid-3">
+            <div class="category_item">
+              <div class="category_item_image filled">
+                <a href="#">
+                  <img src="catalog/view/theme/Gobazar/image/images/cat2.png" alt="">
+                  <span>Моторные масла</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-6">
+            <div class="category_item">
+              <div class="category_item_image title_first">
+                <a href="#">
+                  <img src="catalog/view/theme/Gobazar/image/images/cat3.png" alt="">
+                  <span>Моторные масла</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-3">
+            <div class="category_item">
+              <div class="category_item_list">
+                <ul>
+                  <li>
+                    <a href="#">Аутригеры</a>
+                  </li>
+                  <li>
+                    <a href="#">Каретки</a>
+                  </li>
+                  <li>
+                    <a href="#">Ковши</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="list_row">
+          <div class="grid grid-6">
+            <div class="category_item">
+              <div class="category_item_image">
+                <a href="#">
+                  <img src="catalog/view/theme/Gobazar/image/images/cat5.png" alt="">
+                  <span>Ремкомплекты</span>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-3">
+            <div class="category_item">
+              <div class="category_item_list">
+                <ul>
+                  <li>
+                    <a href="#">Аутригеры</a>
+                  </li>
+                  <li>
+                    <a href="#">Болты навесного оборудования</a>
+                  </li>
+                  <li>
+                    <a href="#">Быстросъемные соединения</a>
+                  </li>
+                  <li>
+                    <a href="#">Вкладыши телескопа</a>
+                  </li>
+                  <li>
+                    <a href="#">Втулки</a>
+                  </li>
+                  <li>
+                    <a href="#">Втулки гидромолота</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-3">
+            <div class="category_item">
+              <div class="category_item_list filled image">
+                <ul>
+                  <li>
+                    <a href="#">Ковши</a>
+                  </li>
+                  <li>
+                    <a href="#">Ножи</a>
+                  </li>
+                  <li>
+                    <a href="#">Пальцы</a>
+                  </li>
+                </ul>
+                <figure>
+                  <img src="catalog/view/theme/Gobazar/image/images/cat4.png" alt="">
+                </figure>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="list_row">
+          <div class="grid grid-3">
+            <div class="category_item">
+              <div class="category_item_list">
+                <ul>
+                  <li>
+                    <a href="#">Аутригеры</a>
+                  </li>
+                  <li>
+                    <a href="#">Болты навесного оборудования</a>
+                  </li>
+                  <li>
+                    <a href="#">Быстросъемные соединения</a>
+                  </li>
+                  <li>
+                    <a href="#">Вкладыши телескопа</a>
+                  </li>
+                  <li>
+                    <a href="#">Втулки</a>
+                  </li>
+                  <li>
+                    <a href="#">Втулки гидромолота</a>
+                  </li>
+                  <li>
+                    <a href="#">Зубья ковша</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-3">
+            <div class="category_item">
+              <div class="category_item_list">
+                <ul>
+                  <li>
+                    <a href="#">Аутригеры</a>
+                  </li>
+                  <li>
+                    <a href="#">Каретки</a>
+                  </li>
+                  <li>
+                    <a href="#">Ковши</a>
+                  </li>
+                  <li>
+                    <a href="#">Ножи</a>
+                  </li>
+                  <li>
+                    <a href="#">Пальцы</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-6">
+            <div class="category_item">
+              <div class="category_item_image title_first">
+                <a href="#">
+                  <img src="catalog/view/theme/Gobazar/image/images/cat6.png" alt="">
+                  <span>Гидравлическая система</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="list_row">
+          <div class="grid grid-4">
+            <div class="category_item">
+              <div class="category_item_list">
+                <div class="list_title">Запчасти на двигатель</div>
+                <ul>
+                  <li>
+                    <a href="#">Аутригеры</a>
+                  </li>
+                  <li>
+                    <a href="#">Болты навесного оборудования</a>
+                  </li>
+                  <li>
+                    <a href="#">Быстросъемные соединения</a>
+                  </li>
+                  <li>
+                    <a href="#">Вкладыши телескопа</a>
+                  </li>
+                  <li>
+                    <a href="#">Втулки</a>
+                  </li>
+                  <li>
+                    <a href="#">Втулки гидромолота</a>
+                  </li>
+                  <li>
+                    <a href="#">Зубья ковша</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-4">
+            <div class="category_item">
+              <div class="category_item_list">
+                <ul>
+                  <li>
+                    <a href="#">Аутригеры</a>
+                  </li>
+                  <li>
+                    <a href="#">Каретки</a>
+                  </li>
+                  <li>
+                    <a href="#">Ковши</a>
+                  </li>
+                  <li>
+                    <a href="#">Ножи</a>
+                  </li>
+                  <li>
+                    <a href="#">Пальцы</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="grid grid-4">
+            <div class="category_item">
+              <div class="category_item_list">
+                <ul>
+                  <li>
+                    <a href="#">Аутригеры</a>
+                  </li>
+                  <li>
+                    <a href="#">Каретки</a>
+                  </li>
+                  <li>
+                    <a href="#">Ковши</a>
+                  </li>
+                  <li>
+                    <a href="#">Ножи</a>
+                  </li>
+                  <li>
+                    <a href="#">Пальцы</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -177,25 +471,43 @@
       <div class="banner_slider_wrap">
         <div class="dl_banner_slider">
           <div class="banner">
-            <figure>
-              <img src="catalog/view/theme/Gobazar/image/images/banner.jpg" alt="">
-            </figure>
+            <div class="banner_image">
+              <figure>
+                <img src="catalog/view/theme/Gobazar/image/images/banner.jpg" alt="" class="banner_main">
+              </figure>
+              <picture>
+                <source media="(min-width:1024px)" srcset="catalog/view/theme/Gobazar/image/images/banner_elem.png">
+                <img src="catalog/view/theme/Gobazar/image/images/banner_elem_mobile.png" alt="">
+              </picture>
+            </div>
             <div class="banner_content">
-              <div class="banner_text"><span>Диски колеса на JCB</span>Всего <span>10 750 ₽</span></div>
+              <div class="banner_text"><span>Диски колеса на JCB</span> Всего <span>10 750 ₽</span></div>
             </div>
           </div>
           <div class="banner">
-            <figure>
-              <img src="catalog/view/theme/Gobazar/image/images/banner.jpg" alt="">
-            </figure>
+            <div class="banner_image">
+              <figure>
+                <img src="catalog/view/theme/Gobazar/image/images/banner.jpg" alt="" class="banner_main">
+              </figure>
+              <picture>
+                <source media="(min-width:1024px)" srcset="catalog/view/theme/Gobazar/image/images/banner_elem.png">
+                <img src="catalog/view/theme/Gobazar/image/images/banner_elem_mobile.png" alt="">
+              </picture>
+            </div>
             <div class="banner_content">
               <div class="banner_text"><span>Диски колеса на JCB </span>Всего <span>10 750 ₽</span></div>
             </div>
           </div>
           <div class="banner">
-            <figure>
-              <img src="catalog/view/theme/Gobazar/image/images/banner.jpg" alt="">
-            </figure>
+            <div class="banner_image">
+              <figure>
+                <img src="catalog/view/theme/Gobazar/image/images/banner.jpg" alt="" class="banner_main">
+              </figure>
+              <picture>
+                <source media="(min-width:1024px)" srcset="catalog/view/theme/Gobazar/image/images/banner_elem.png">
+                <img src="catalog/view/theme/Gobazar/image/images/banner_elem_mobile.png" alt="">
+              </picture>
+            </div>
             <div class="banner_content">
               <div class="banner_text"><span>Диски колеса на JCB </span>Всего <span>10 750 ₽</span></div>
             </div>
@@ -263,22 +575,18 @@
   </section>
 </main>
 <div id="content">
-  <div class="box ProductbyCategory bottom-to-top hb-animate-element">
+  <div class="box ProductbyCategory bottom-to-top hb-animate-element product_list_with_tabs">
     <div class=" dl_container">
       <div class="row">
       <div class="dl_theme"><div class="section_title">Новинки, актуальные предложения</div></div>
         <div class="tab-head">
-          <div class="hometab-heading box-heading">Новинки, актуальные предложения</div>
-          <div id="tabss" class="htabs">
+          <div id="tabss" class="category_tabs">
             <ul class="etabs">
               <li class="tab">
                 <a href="#tab-new">Новинки</a>
               </li>
               <li class="tab">
                 <a href="#tab-hot">Хиты</a>
-              </li>
-              <li class="tab">
-                <a href="#tab-seasson">Сезон</a>
               </li>
             </ul>
           </div>
