--- a/source/sass/layout/sections/_01_hero.scss
+++ b/source/sass/layout/sections/_01_hero.scss
@@ -12,7 +12,7 @@ section.hero{
     .hero_banner{
       flex: 1;
       width: calc(24% - 32px);
-      border-radius: 5px;
+      border-radius: 12px;
       overflow: hidden;
       @media(max-width: 1024px){
         width: 100%;
@@ -88,6 +88,7 @@ section.hero{
               @media(max-width: 1024px){
                 justify-content: flex-end;
                 gap: 10px;
+                font-size: 13px;
               }
               &:hover{
                 color: $cbase;
@@ -101,6 +102,9 @@ section.hero{
                 color: $cwhite;
                 font-size: 15px;
                 transition: 0.4s;
+                @media(max-width: 1024px){
+                  font-size: 13px;
+                }
               }
             }
           }
@@ -108,10 +112,52 @@ section.hero{
       }
       &.left{
         .banner_content{
-          .text:not(.banner_button){
-            padding-top: 50%;
+          @media(max-width: 1024px){
+            display: flex;
+            gap: 15px;
+            align-items: center;
+            flex-direction: row;
+          }
+          .text.title{
+            flex: 1;
+          }
+          .wrap{
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
             @media(max-width: 1024px){
-              padding-top: 0;
+              gap: 10px;
+              align-items: flex-end;
+            }
+          }
+          .text:not(.banner_button):not(.title){
+            @media(max-width: 1024px){
+              display: inline-flex;
+              justify-content: center;
+              align-items: center;
+              gap: 5px;
+              flex-direction: row;
+              font-size: 11px;
+              background-color: #005BFF;
+              color: $cwhite;
+              border-radius: 5px;
+              text-transform: uppercase;
+              padding: 1px 4px;
+              br{
+                display: none;
+              }
+            }
+            span{
+              @media(max-width: 1024px){
+                font-size: 12px;
+              }
+            }
+          }
+          .text:not(.banner_button).title{
+            @media(max-width: 1024px){
+              font-size: 21px;
+              line-height: 21px;
             }
           }
         }
@@ -180,7 +226,7 @@ section.hero{
         }
         .hero_slider_item{
           width: 100%;
-          border-radius: 5px;
+          border-radius: 12px;
           height: 100%;
           overflow: hidden;
           padding: 25px 20px 100px;
@@ -204,9 +250,11 @@ section.hero{
               display: flex;
               flex-direction: column;
               font-size: 45px;
+              gap: 25px;
               margin-bottom: 50px;
               color: $cwhite;
               font-weight: 700;
+              line-height: 34px;
               @media(max-width: 1024px){
                 font-size: 30px;
                 margin-bottom: 20px;
