--- a/wp-content/themes/dltheme/homeTest.twig
+++ b/wp-content/themes/dltheme/homeTest.twig
@@ -8,9 +8,12 @@
             <img src="catalog/view/theme/Gobazar/image/images/hero1.jpg" alt="">
           </figure>
           <div class="banner_content">
-            <div class="text"><span>13 дней</span> осталось</div>
-            <div class="banner_button text">
-              <a href="#">Перейти в каталог</a>
+            <div class="text title">Распродажа</div>
+            <div class="wrap">
+              <div class="text"><span>13 дней</span> <br> осталось</div>
+              <div class="banner_button text">
+                <a href="#">Перейти в каталог</a>
+              </div>
             </div>
           </div>
         </div>
@@ -121,7 +124,7 @@
   </section>
   <section class="benefits">
     <div class=" dl_container">
-      <div class="section_title">Наши преимущества</div>
+      <h2 class="section_title">Наши преимущества</h2>
       <div class="block_wrap">
         <div class="benefits_list">
           <div class="benefit_item">
@@ -158,7 +161,7 @@
   </section>
   <section class="categories_list">
     <div class=" dl_container">
-      <div class="section_title">Каталог запчастей для спецтехники</div>
+      <h1 class="section_title">Каталог запчастей для спецтехники</h1>
       <div class="categories_catalog grid">
         <div class="list_row">
           <div class="grid grid-6">
@@ -171,55 +174,57 @@
               </div>
             </div>
           </div>
-          <div class="grid grid-3">
-            <div class="category_item">
-              <div class="category_item_list">
-                <ul>
-                  <li>
-                    <a href="#">Аутригеры</a>
-                  </li>
-                  <li>
-                    <a href="#">Болты навесного оборудования</a>
-                  </li>
-                  <li>
-                    <a href="#">Быстросъемные соединения</a>
-                  </li>
-                  <li>
-                    <a href="#">Вкладыши телескопа</a>
-                  </li>
-                  <li>
-                    <a href="#">Втулки</a>
-                  </li>
-                  <li>
-                    <a href="#">Втулки гидромолота</a>
-                  </li>
-                  <li>
-                    <a href="#">Зубья ковша</a>
-                  </li>
-                </ul>
+          <div class="list_row grid grid-6 scroll_on_mobile">
+            <div class="grid grid-6">
+              <div class="category_item">
+                <div class="category_item_list">
+                  <ul>
+                    <li>
+                      <a href="#">Аутригеры</a>
+                    </li>
+                    <li>
+                      <a href="#">Болты навесного оборудования</a>
+                    </li>
+                    <li>
+                      <a href="#">Быстросъемные соединения</a>
+                    </li>
+                    <li>
+                      <a href="#">Вкладыши телескопа</a>
+                    </li>
+                    <li>
+                      <a href="#">Втулки</a>
+                    </li>
+                    <li>
+                      <a href="#">Втулки гидромолота</a>
+                    </li>
+                    <li>
+                      <a href="#">Зубья ковша</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="grid grid-3">
-            <div class="category_item">
-              <div class="category_item_list">
-                <ul>
-                  <li>
-                    <a href="#">Аутригеры</a>
-                  </li>
-                  <li>
-                    <a href="#">Каретки</a>
-                  </li>
-                  <li>
-                    <a href="#">Ковши</a>
-                  </li>
-                  <li>
-                    <a href="#">Ножи</a>
-                  </li>
-                  <li>
-                    <a href="#">Пальцы</a>
-                  </li>
-                </ul>
+            <div class="grid grid-6">
+              <div class="category_item">
+                <div class="category_item_list">
+                  <ul>
+                    <li>
+                      <a href="#">Аутригеры</a>
+                    </li>
+                    <li>
+                      <a href="#">Каретки</a>
+                    </li>
+                    <li>
+                      <a href="#">Ковши</a>
+                    </li>
+                    <li>
+                      <a href="#">Ножи</a>
+                    </li>
+                    <li>
+                      <a href="#">Пальцы</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
@@ -322,55 +327,57 @@
           </div>
         </div>
         <div class="list_row">
-          <div class="grid grid-3">
-            <div class="category_item">
-              <div class="category_item_list">
-                <ul>
-                  <li>
-                    <a href="#">Аутригеры</a>
-                  </li>
-                  <li>
-                    <a href="#">Болты навесного оборудования</a>
-                  </li>
-                  <li>
-                    <a href="#">Быстросъемные соединения</a>
-                  </li>
-                  <li>
-                    <a href="#">Вкладыши телескопа</a>
-                  </li>
-                  <li>
-                    <a href="#">Втулки</a>
-                  </li>
-                  <li>
-                    <a href="#">Втулки гидромолота</a>
-                  </li>
-                  <li>
-                    <a href="#">Зубья ковша</a>
-                  </li>
-                </ul>
+          <div class="list_row grid grid-6 scroll_on_mobile">
+            <div class="grid grid-6">
+              <div class="category_item">
+                <div class="category_item_list">
+                  <ul>
+                    <li>
+                      <a href="#">Аутригеры</a>
+                    </li>
+                    <li>
+                      <a href="#">Болты навесного оборудования</a>
+                    </li>
+                    <li>
+                      <a href="#">Быстросъемные соединения</a>
+                    </li>
+                    <li>
+                      <a href="#">Вкладыши телескопа</a>
+                    </li>
+                    <li>
+                      <a href="#">Втулки</a>
+                    </li>
+                    <li>
+                      <a href="#">Втулки гидромолота</a>
+                    </li>
+                    <li>
+                      <a href="#">Зубья ковша</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="grid grid-3">
-            <div class="category_item">
-              <div class="category_item_list">
-                <ul>
-                  <li>
-                    <a href="#">Аутригеры</a>
-                  </li>
-                  <li>
-                    <a href="#">Каретки</a>
-                  </li>
-                  <li>
-                    <a href="#">Ковши</a>
-                  </li>
-                  <li>
-                    <a href="#">Ножи</a>
-                  </li>
-                  <li>
-                    <a href="#">Пальцы</a>
-                  </li>
-                </ul>
+            <div class="grid grid-6">
+              <div class="category_item">
+                <div class="category_item_list">
+                  <ul>
+                    <li>
+                      <a href="#">Аутригеры</a>
+                    </li>
+                    <li>
+                      <a href="#">Каретки</a>
+                    </li>
+                    <li>
+                      <a href="#">Ковши</a>
+                    </li>
+                    <li>
+                      <a href="#">Ножи</a>
+                    </li>
+                    <li>
+                      <a href="#">Пальцы</a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
@@ -518,7 +525,10 @@
   </section>
   <section class="brands">
     <div class=" dl_container">
-      <div class="section_title">Популярные бренды</div>
+      <h2 class="section_title">
+        <img src="catalog/view/theme/Gobazar/image/images/badge.png" alt="">
+        Популярные бренды
+      </h2>
       <div class="brands_list">
         <div class="brand_item">
           <figure>
@@ -578,7 +588,12 @@
   <div class="box ProductbyCategory bottom-to-top hb-animate-element product_list_with_tabs">
     <div class=" dl_container">
       <div class="row">
-      <div class="dl_theme"><div class="section_title">Новинки, актуальные предложения</div></div>
+      <div class="dl_theme">
+        <h2 class="section_title">
+          <img src="catalog/view/theme/Gobazar/image/images/file.png" alt="">
+          Новинки, актуальные предложения
+        </h2>
+      </div>
         <div class="tab-head">
           <div id="tabss" class="category_tabs">
             <ul class="etabs">
@@ -1443,26 +1458,21 @@
   <div class="box webdigifyblog bottom-to-top hb-animate-element">
     <div class=" dl_container">
       <div class="row">
-        <div class="dl_theme"><div class="section_title">Новости</div></div>
+        <div class="dl_theme">
+          <h2 class="section_title">
+            <img src="catalog/view/theme/Gobazar/image/images/news.png" alt="">
+            Новости
+          </h2>
+        </div>
         <div class="box-content">
           <div class="box-product owl-carousel blogcarousel" id="blog-carousel">
             <div class="blog-item">
               <div class="product-block">
                 <div class="blog-left">
                   <div class="blog-image">
-                    <img src="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp" alt="Новости" title="Новости" class="img-thumbnail" />
-                    <div class="post-image-hover"></div>
-                    <p class="post_hover">
-                      <a
-                        class="icon zoom"
-                        title="Click to view Full Image "
-                        href="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp"
-                        data-lightbox="example-set"
-                      >
-                        <i class="fa fa-search-plus"></i>
-                      </a>
-                      <a class="icon readmore_link" title="Click to view Read More " href="https://jcbprof.ru/kody-neispravnostej-tekhniki-new-holland"><i class="fa fa-link"></i></a>
-                    </p>
+                    <a title="Click to view Read More " href="https://jcbprof.ru/kody-neispravnostej-tekhniki-new-holland">
+                      <img src="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp" alt="Новости" title="Новости" class="img-thumbnail" />
+                    </a>
                   </div>
                 </div>
 
@@ -1482,19 +1492,9 @@
               <div class="product-block">
                 <div class="blog-left">
                   <div class="blog-image">
-                    <img src="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp" alt="Новости" title="Новости" class="img-thumbnail" />
-                    <div class="post-image-hover"></div>
-                    <p class="post_hover">
-                      <a
-                        class="icon zoom"
-                        title="Click to view Full Image "
-                        href="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp"
-                        data-lightbox="example-set"
-                      >
-                        <i class="fa fa-search-plus"></i>
-                      </a>
-                      <a class="icon readmore_link" title="Click to view Read More " href="https://jcbprof.ru/kody-neispravnostej-tekhniki-new-holland"><i class="fa fa-link"></i></a>
-                    </p>
+                    <a title="Click to view Read More " href="https://jcbprof.ru/kody-neispravnostej-tekhniki-new-holland">
+                      <img src="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp" alt="Новости" title="Новости" class="img-thumbnail" />
+                    </a>
                   </div>
                 </div>
 
@@ -1514,19 +1514,9 @@
               <div class="product-block">
                 <div class="blog-left">
                   <div class="blog-image">
-                    <img src="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp" alt="Новости" title="Новости" class="img-thumbnail" />
-                    <div class="post-image-hover"></div>
-                    <p class="post_hover">
-                      <a
-                        class="icon zoom"
-                        title="Click to view Full Image "
-                        href="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp"
-                        data-lightbox="example-set"
-                      >
-                        <i class="fa fa-search-plus"></i>
-                      </a>
-                      <a class="icon readmore_link" title="Click to view Read More " href="https://jcbprof.ru/kody-neispravnostej-tekhniki-new-holland"><i class="fa fa-link"></i></a>
-                    </p>
+                    <a title="Click to view Read More " href="https://jcbprof.ru/kody-neispravnostej-tekhniki-new-holland">
+                      <img src="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp" alt="Новости" title="Новости" class="img-thumbnail" />
+                    </a>
                   </div>
                 </div>
 
@@ -1546,19 +1536,9 @@
               <div class="product-block">
                 <div class="blog-left">
                   <div class="blog-image">
-                    <img src="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp" alt="Новости" title="Новости" class="img-thumbnail" />
-                    <div class="post-image-hover"></div>
-                    <p class="post_hover">
-                      <a
-                        class="icon zoom"
-                        title="Click to view Full Image "
-                        href="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp"
-                        data-lightbox="example-set"
-                      >
-                        <i class="fa fa-search-plus"></i>
-                      </a>
-                      <a class="icon readmore_link" title="Click to view Read More " href="https://jcbprof.ru/kody-neispravnostej-tekhniki-new-holland"><i class="fa fa-link"></i></a>
-                    </p>
+                    <a title="Click to view Read More " href="https://jcbprof.ru/kody-neispravnostej-tekhniki-new-holland">
+                      <img src="https://jcbprof.ru/image/cache/webp/catalog/1690423994_myskillsconnect-com-p-ekskavator-pogruzchik-new-holland-115-foto-18-1040x324.webp" alt="Новости" title="Новости" class="img-thumbnail" />
+                    </a>
                   </div>
                 </div>
 
