--- a/source/sass/layout/sections/_02_benefits.scss
+++ b/source/sass/layout/sections/_02_benefits.scss
@@ -34,7 +34,7 @@ section.benefits{
             gap: 15px;
           }
           &:hover{
-            background-color: transparent;
+            background-color: #F5F5F5;
           }
           figure{
             display: flex;
